# password-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __pyproject.toml  docker-compose.yml  example.env  pyproject.toml
core/: crypto.py  envs.py  settings.py  urls.py
encryption/: create_crypto.py  decrypt.py  encrypt.py
password_manager/: _services.py  admin.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
password_manager/api/: _password.py  _search.py  password.py
password_manager/migrations/: 0001_initial.py
password_manager/serializers/: password.py
password_manager/services/: password.py
utils/: custom_exceptions.py
