[project]
name = "password-manager"
version = "0.1.0"
description = ""
authors = [
    { name = "DorLex", email = "dorozhinskiysanya@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.0,<5.0.0)",
    "ruff (>=0.14.6,<0.15.0)"
]


[tool.ruff]
target-version = "py312"
line-length = 120
fix = true
show-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D100", # docstrings
    "D101",
    "D102",
    "D104",
    "D105",
    "D106",
    "D203",
    "D212",
    "D413",
    "SLF001", # obj._protected_member
    "S101", # запрет использования assert
    "S105",
    "S106",
    "TC002", # отдельный импорт для аттотаций
    "PLC0415",
    "TRY003",
    "EM101"
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single" # формат ковычек

[tool.ruff.format]
quote-style = "single" # формат ковычек
